engines/ep/src/checkpoint.cc
@@ -78,6 +78,10 @@ size_t CheckpointCursor::getRemainingItemsCount() const {
     return remaining;
 }
 
+std::pair<int64_t, uint64_t> CheckpointCursor::getSeqnoAndCkptId() const {
+    return {(*currentPos)->getBySeqno(), (*currentCheckpoint)->getId()};
+}
+
 CheckpointType CheckpointCursor::getCheckpointType() const {
     return (*currentCheckpoint)->getCheckpointType();
 }
