engines/ep/src/checkpoint.h
@@ -202,6 +202,8 @@ private:
      */
     size_t getRemainingItemsCount() const;
 
+    std::pair<int64_t, uint64_t> getSeqnoAndCkptId() const;
+
     std::string                      name;
     CheckpointList::iterator currentCheckpoint;
 
